--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
         "next": "16.0.3",
         "react": "19.2.0",
         "react-dom": "19.2.0",
+        "sass": "^1.94.0",
         "tailwind-merge": "^3.4.0",
         "zustand": "^5.0.8"
     },
