--- a/web/package.json
+++ b/web/package.json
@@ -17,9 +17,11 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.553.0",
         "next": "16.0.3",
+        "next-themes": "^0.4.6",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "sass": "^1.94.0",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^3.4.0",
         "zustand": "^5.0.8"
     },
