--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "start": "tsc && node dist/server.js",
-        "dev": "ts-node-dev server.ts",
+        "dev": "ts-node-dev --respawn --transpile-only --project tsconfig.json server.ts",
         "build": "tsc",
         "lint": "eslint . --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix",
