--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.19.4",
+        "groq-sdk": "^0.35.0",
         "socket.io": "^4.8.1",
         "ts-node-dev": "^2.0.0",
         "zod": "^4.1.12"
