--- a/ai/package.json
+++ b/ai/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "commerzbank-ai-agent",
+  "version": "1.0.0",
+  "main": "main.ts",
+  "scripts": {
+    "start": "ts-node main.ts",
+    "dev": "ts-node --watch main.ts"
+  },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "groq-sdk": "^0.35.0"
+    "groq-sdk": "^0.35.0",
+    "node-edge-tts": "^1.2.8"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
