--- a/server/.env.template
+++ b/server/.env.template
@@ -6,4 +6,5 @@ JWT_SECRET="YOUR_SECRET"
 
 MONGO_URI="mongodb://localhost:27017/"
 
+EXCHANGE_API_ENDPOINT="https://open.er-api.com/v6/latest"
 GROQ_API_KEY="YOUR_GROQ_API_KEY"
