--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
         "pm2": "pm2 start npm --name elowen -- start"
     },
     "dependencies": {
+        "@p5-wrapper/react": "^4.4.2",
         "@radix-ui/react-label": "^2.1.8",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-separator": "^1.1.8",
