--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
         "lucide-react": "^0.553.0",
         "next": "16.0.3",
         "next-themes": "^0.4.6",
+        "node-edge-tts": "^1.2.8",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "recharts": "^3.4.1",
