--- a/web/.env.template
+++ b/web/.env.template
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_API_URL="http://localhost:5000/api"
 NEXT_PUBLIC_SOCKET="http://localhost:5000"
+
+# https://dashboard.particle.network/#/applications
+NEXT_PUBLIC_PROJECT_ID="PARTICKE_NETWORK_PROJECT_ID"
+NEXT_PUBLIC_CLIENT_KEY="PARTICKE_NETWORK_CLIENT_KEY"
+NEXT_PUBLIC_APP_ID="PARTICKE_NETWORK_APP_ID"
