--- a/server/.env.template
+++ b/server/.env.template
@@ -7,4 +7,7 @@ JWT_SECRET="YOUR_SECRET"
 MONGO_URI="mongodb://localhost:27017/"
 
 EXCHANGE_API_ENDPOINT="https://open.er-api.com/v6/latest"
+
+NEXT_PUBLIC_REOWN_PROJECT_ID=""
+
 GROQ_API_KEY="YOUR_GROQ_API_KEY"
