--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "mongoose": "^8.19.4",
         "groq-sdk": "^0.35.0",
         "socket.io": "^4.8.1",
+        "viem": "^2.13.10",
         "ts-node-dev": "^2.0.0",
         "zod": "^4.1.12"
     },
