--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "@p5-wrapper/react": "^4.4.2",
+        "@particle-network/connectkit": "^2.1.3",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-label": "^2.1.8",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-separator": "^1.1.8",
